--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "bugs": {
         "url": "https://github.com/plunkydev/todo-list/issues"
     },
-    "homepage": "https://github.com/plunkydev/todo-list#readme"
+    "homepage": "https://github.com/plunkydev/todo-list#readme",
+    "dependencies": {
+        "date-fns": "^4.1.0"
+    }
 }
